--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,18 +1,37 @@
 {
   "name": "ui",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "source": "src/index.ts",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "type": "module",
   "license": "MIT",
   "scripts": {
+    "dev": "pnpm build --watch",
+    "build": "rollup --config --bundleConfigAsCjs",
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@emotion/babel-plugin": "11.10.6",
+    "@emotion/babel-preset-css-prop": "11.10.0",
+    "@emotion/css": "11.10.6",
+    "@emotion/react": "11.10.6",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-commonjs": "24.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-typescript": "11.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "date-fns": "2.29.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "rollup": "3.18.0",
+    "rollup-plugin-peer-deps-external": "2.2.4",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
   }
