Added prettier plugin to sort imports. Jest setup with ts and babel

--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/jest": "29.4.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "latest",
-    "turbo": "latest"
+    "jest": "29.4.3",
+    "ts-jest": "29.0.5",
+    "turbo": "1.8.3"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "pnpm@7.22.0"
 }
