--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -7,8 +7,10 @@
     "eslint": "^7.23.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-turbo": "latest",
     "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
+    "prettier": "2.8.4",
+    "@trivago/prettier-plugin-sort-imports": "4.1.1"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
