--- a/packages/ui/.babelrc
+++ b/packages/ui/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["@babel/env", "@babel/preset-react"],
+  "presets": ["@babel/env", "@babel/preset-react", "@babel/preset-typescript"],
   "plugins": ["@emotion/babel-plugin"]
 }
