--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,14 +9,15 @@
   "scripts": {
     "dev": "pnpm build --watch",
     "build": "rollup --config --bundleConfigAsCjs",
+    "test": "jest",
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.21.0",
     "@emotion/babel-plugin": "11.10.6",
-    "@emotion/babel-preset-css-prop": "11.10.0",
     "@emotion/css": "11.10.6",
     "@emotion/react": "11.10.6",
     "@rollup/plugin-babel": "6.0.3",
@@ -25,6 +26,7 @@
     "@rollup/plugin-typescript": "11.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "babel-jest": "29.4.3",
     "date-fns": "2.29.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
