--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\""
   },
   "devDependencies": {
+    "@babel/cli": "7.21.0",
+    "@babel/core": "7.0.0",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.21.0",
     "@types/jest": "29.4.0",
+    "babel-jest": "29.4.3",
     "eslint-config-custom": "workspace:*",
     "jest": "29.4.3",
-    "ts-jest": "29.0.5",
+    "jest-environment-jsdom": "29.4.3",
     "turbo": "1.8.3"
   },
   "engines": {
