--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,10 +13,6 @@
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.21.0",
     "@emotion/babel-plugin": "11.10.6",
     "@emotion/css": "11.10.6",
     "@emotion/react": "11.10.6",
@@ -24,9 +20,10 @@
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "11.0.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "babel-jest": "29.4.3",
     "date-fns": "2.29.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
